syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.optimus.prime";
option java_outer_classname = "PrimeNumbersProto";

package com.optimus.prime;

service PrimeNumbers {
    rpc GetPrimeNumbers (PrimeNumbersRequest) returns (stream PrimeNumbersResponse) {}
}

message PrimeNumbersRequest {
    int32 number = 1;
}

message PrimeNumbersResponse {
    int32 prime_number = 1;
}
